--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header">
         <video autoplay muted loop id="myVideo">
-            <source src="/assets/image/vid-bg.mp4" type="video/mp4">
+            <source src="/assets/image/vid-bg 1.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
           </video>
         <div class="top">
@@ -49,7 +49,8 @@
                 </div>
             </div>
             <div class="header-quotes">
-                <p class="quotes-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, quas.</p>
+                <p class="quotes-text">Mari Refresing</p>
+                <p class="quotes-text" id="quotes"></p>
             </div>
         </div>
         <div class="center">
@@ -73,5 +74,6 @@
     </div>  
     <script src="/assets/javascript/clock.js"></script>
     <script src="/assets/javascript/todo.js"></script>
+    <script src="/assets/javascript/api.js"></script>
 </body>
 </html>
